option java_outer_classname = "AdvertisementProtos";
message ProtoAdvertisement {
	optional ProtoNetworkGraph topology = 2;
	repeated ProtoClass taggedClasses = 1;
}

message ProtoClass {
	required int64 uniqueID = 1;
}

message ProtoValues {
	message valueFieldEntry {
		required int64 classID = 1;
		optional bytes classInfo = 2;
	}

	repeated valueFieldEntry classValues = 1;
}

message ProtoEdgeNodes {
	required ProtoNode node1 = 1;
	required ProtoNode node2 = 2;
}

message ProtoNode {
	required int64 nodeNum = 1;
	repeated ProtoClass supportedClasses = 2;
}

message ProtoAdjacentNodes {
	required ProtoNode referenceNode = 1;
	repeated ProtoNode neighbors = 2;
}

message ProtoNetworkGraph {
	message annotatedEdgesFieldEntry {
		required ProtoEdgeNodes edgePair = 1;
		optional ProtoValues annotations = 2;
	}

	message keyValuePairsFieldEntry {
		required string key = 1;
		optional ProtoValues values = 2;
	}

	repeated ProtoAdjacentNodes adjacencyList = 1;
	repeated annotatedEdgesFieldEntry annotatedEdges = 2;
	repeated keyValuePairsFieldEntry keyValuePairs = 3;
}